# dim-dim-health

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile.api  Dockerfile.worker  FLUTTER_IMPLEMENTATION.md  GMAIL_SETUP.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  OPENOBSERVE.md  OPTIMIZATION_GUIDE.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_SCAN_SUMMARY.md  TESTING.md  VULNERABILITY_SCAN_REPORT.md  WORKER_ANALYSIS.md  docker-compose.nginx.yml  docker-compose.yml
.github/workflows/: backend-tests.yml  ci.yml  dependencies.yml
api/: Cargo.toml
api/docs/: USER_VIEWING_PERMISSIONS.md
api/src/: lib.rs  main.rs
api/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  resource_authorization.rs  user_view_authorization.rs
api/src/axummain/: env_loader.rs  mod.rs  request_tracing.rs  router.rs  server.rs  state.rs  telemetry.rs
api/src/handlers/: auth.rs  food_item.rs  gym.rs  meal.rs  meal_item.rs  mod.rs  server_health.rs  settings.rs  user_group.rs  user_info.rs  user_streaks.rs  user_watch_permissions.rs  user_weight.rs
api/src/handlers/metrics/: mod.rs
api/src/jobs/: email.rs  mod.rs
api/src/metrics/: middleware.rs  mod.rs
api/src/repositories/: email_verification_repository.rs  food_item_repository.rs  gym_exercise_repository.rs  gym_session_repository.rs  gym_set_repository.rs  meal_item_repository.rs  meal_repository.rs  mod.rs  password_reset_repository.rs  refresh_token_repository.rs  user_group_repository.rs  user_info_repository.rs  user_repository.rs  user_streak_repository.rs  user_watch_permission_repository.rs  user_weight_repository.rs
api/src/schemas/: auth_schemas.rs  food_item_schemas.rs  gym_schemas.rs  meal_schemas.rs  mod.rs  password_reset_schemas.rs  settings_schemas.rs  user_group_schemas.rs  user_info_schemas.rs  user_watch_permission_schemas.rs  user_weight_schemas.rs
api/src/services/: authorization.rs  mod.rs
api/src/utils/: get_now_time_paris.rs  guest_name_generator.rs  mod.rs
api/src/weight/: mod.rs  weight_infos.rs
api/tests/: mod.rs
api/tests/endpoints/: auth.rs  metrics.rs  mod.rs  server_health.rs  user_group.rs  user_watch_permissions.rs
api/tests/helpers/: app_paths.rs  mod.rs  test_data.rs  test_server.rs
api/tests/repositories/: email_verification_repository.rs  mod.rs  password_reset_repository.rs  refresh_token_repository.rs  user_group_repository.rs  user_info_repository.rs  user_repository.rs  user_watch_permission_repository.rs
app/dimdimhealth/: .gitignore  APP_FLOW.md  AUTHENTICATION.md  AUTH_FLOW_DIAGRAM.md  ENVIRONMENT.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE.md  QUICKSTART.md  README.md  pubspec.yaml  setup.sh
config/: common.toml.example  dev.toml  prod.toml  prod.toml.example
deploy/: docker-compose.nginx.yml  docker-compose.yml
deploy/nginx/: nginx.conf
deploy/scripts/: backup.sh  deploy-production.sh  (+5 more)
docs/: DEPLOYMENT.md  MULTI_PI_DEPLOYMENT.md  PRODUCTION_INTERNET_ACCESS.md  QUICKSTART.md
entities/: Cargo.toml
entities/src/: env_loader.rs  lib.rs  logging.rs
entities/src/db/: mod.rs
entities/src/db/extensions/: email_verification_token_ext.rs  mod.rs  password_reset_token_ext.rs  refresh_token_ext.rs
entities/src/db/partial_models/: README.md  mod.rs  token_partial.rs  users_partial.rs
entities/src/redis/: mod.rs
entities/tests/: logging_compatibility_test.rs
examples/: logging_demo.rs  logging_demo_compact.rs  logging_demo_json.rs
migration/: Cargo.toml
migration/src/: helpers.rs  lib.rs  m20251028_170454_user_table.rs  m20251101_123625_create_email_verification_tokens.rs  m20251101_124651_add_email_verified_to_users.rs  m20251105_173226_pg_cron_delete_expired_token.rs  m20251114_112914_create_password_reset_tokens.rs  m20251114_222407_create_refresh_tokens.rs  m20251114_234540_pg_cron_delete_expired_token.rs  m20251115_143529_create_user_info.rs  m20251115_151418_create_user_groups.rs  m20251115_153356_create_user_watch_permissions.rs  m20251115_154743_create_weight_table.rs  m20251115_160046_create_food_item.rs  m20251115_160750_create_meal.rs  m20251115_161449_create_meal_item.rs  m20251119_163331_clean_guest_users.rs  m20251119_163331_pg_cron_clean_guest_users.rs  m20251119_170512_add_cascade_delete_to_foreign_keys.rs  m20251119_172747_pg_cron_clean_non_verified_email.rs  m20251121_074500_add_query_optimization_indexes.rs  m20251121_075200_add_profile_image_to_users.rs  m20251121_075300_add_pending_email_to_verification_tokens.rs  m20251121_080000_create_email_preferences.rs  m20251121_080050_create_monthly_recap_queue.rs  m20251121_080100_pg_cron_monthly_recap.rs  m20251121_080150_create_weekly_recap_queue.rs  m20251121_080200_pg_cron_weekly_recap.rs  m20251121_080208_create_user_streaks.rs  m20251121_080250_create_yearly_recap_queue.rs  m20251121_080300_pg_cron_yearly_recap.rs  m20251124_130840_add_user_image.rs  m20251127_200326_unique_weight_per_day.rs  m20251129_175041_create_email_recap_pref.rs  m20251129_234020_create_gym_exercise.rs  m20251129_234021_create_gym_session.rs  m20251129_234022_create_gym_set.rs
migrations/: 20251023101229_create_users_table.sql
scripts/: Dockerfile.postgres  backup.sh  db-migrate.sh  deploy-production.sh  deploy.sh  dev-env.sh  dimdim-health.service  pgcli.sh  quick-start.sh  restore.sh  test-env.sh  test_openobserve.sh  validate-setup.sh
src/: lib.rs  main.rs
test-api/: 01-health-check.sh  02-register-user.sh  03-login-user.sh  04-current-user.sh  README.md  run-all-tests.sh
tests/: auth.rs  server_health.rs
tests_helpers/: Cargo.toml
tests_helpers/src/: lib.rs  test_data.rs  test_server.rs
worker/: Cargo.toml
worker/src/: lib.rs  main.rs
worker/src/mail_jobs/: common_mail_jobs.rs  daily_usage_recap_mail.rs  email_change_mail.rs  mail_jobs.rs  mod.rs  monthly_recap_mail.rs  register_mail.rs  reset_password_mail.rs  weekly_recap_mail.rs  yearly_recap_mail.rs
worker/src/scheduled_jobs/: mod.rs  monthly_recap_processor.rs  weekly_recap_processor.rs  yearly_recap_processor.rs
worker/src/worker_main/: env_loader.rs  mod.rs  state.rs  telemetry.rs  worker.rs
(+100 files in other folders)
