[package]
name = "dimdim-health"
version = "0.1.0"
edition = "2024"

[lib]
name = "dimdim_health"
path = "src/lib.rs"

[[bin]]
name = "dimdim-health"
path = "src/main.rs"


[workspace]
resolver = "2"
members = [".", "entities", "migration", "tests_helpers"]


[workspace.dependencies]
# Async trait support
async-trait = "0.1.89"

# Axum and related web libraries
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }

# Logging
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Database
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "mock",
    "with-chrono",
    "with-json",
    "with-uuid",
    "postgres-array",
] }
sea-orm-migration = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }

# UUID and DateTime
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Environment variable management
config = "0.15.18"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Auth
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }

# Email
lettre = { version = "0.11.19", features = [
    "tokio1-native-tls",
    "builder",
    "hostname",
] }

[dependencies]
# Workspace members
migration = { path = "./migration" }
entities = { path = "./entities" }

# Workspace dependencies
async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
validator = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
lettre = { workspace = true }


[dev-dependencies]
async-once-cell = "0.5.4"
axum-test = { version = "18.2.1", features = ["pretty-assertions"] }
tests_helpers = { path = "./tests_helpers" }
