[workspace]
resolver = "2"
members = ["api", "worker", "entities", "migration", "tests_helpers"]


[workspace.dependencies]
# Async trait support
async-trait = "0.1.89"

# Axum and related web libraries
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }

# Reqwest
reqwest = { version = "0.12.24", features = ["blocking", "json"] }

# Error handling
anyhow = "1.0.100"

# Logging
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Database
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "mock",
    "with-chrono",
    "with-json",
    "with-uuid",
    "postgres-array",
] }
sea-orm-migration = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }

# UUID and DateTime
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"

# Environment variable management
config = "0.15.18"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Auth
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }

# Queues
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }

# Email
lettre = { version = "0.11.19" }
