[package]
name = "dimdim-health-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "dimdim_health_api"
path = "src/lib.rs"

[[bin]]
name = "dimdim-health_api"
path = "src/main.rs"

[dependencies]
migration = { path = "../migration" }
entities = { path = "../entities" }

async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
config = { workspace = true }
validator = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
async-once-cell = "0.5.4"
once_cell = "1.21.3"
axum-test = { version = "18.2.1", features = ["pretty-assertions"] }
