[package]
name = "entities"
version = "0.1.0"
edition = "2024"

[lib]
name = "entities"
path = "src/lib.rs"

[[example]]
name = "logging_demo"
path = "../examples/logging_demo.rs"

[[example]]
name = "logging_demo_json"
path = "../examples/logging_demo_json.rs"

[[example]]
name = "logging_demo_compact"
path = "../examples/logging_demo_compact.rs"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
toml = "0.9.8"
