[package]
name = "entities"
version = "0.1.0"
edition = "2024"

[lib]
name = "entities"
path = "src/lib.rs"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
