[package]
name = "migration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
sea-orm-migration = { version = "2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
] }
