[package]
name = "tests_helpers"
version = "0.1.0"
edition = "2024"

[lib]
name = "tests_helpers"
path = "src/lib.rs"

[dependencies]
async-once-cell = "0.5.4"
axum-test = { version = "18.2.1", features = ["pretty-assertions"] }
dimdim-health-api = { path = "../api" }
sea-orm = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
