[package]
name = "dimdim-health-worker"
version = "0.1.0"
edition = "2024"

[lib]
name = "dimdim_health_worker"
path = "src/lib.rs"

[[bin]]
name = "dimdim-health_worker"
path = "src/main.rs"

[dependencies]
migration = { path = "../migration" }
entities = { path = "../entities" }

redis = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
